--- a/sockets/socketclient.html
+++ b/sockets/socketclient.html
@@ -30,7 +30,7 @@
   </nav>
   <div class="container-fluid">
     <div class="row">
-      <div class="col-sm-6" >
+      <div class="col-sm-6">
         <h3>Continious Data</h3>
         <div class="form-group">
           <div class="row com-margin-btm">
@@ -54,16 +54,19 @@
           <h3>Map Details</h3>
         </div>
         <div id="video" class="hide">
-            <h3>Peeling is going on</h3>
+          <h3>Peeling is going on</h3>
           <video loop controls id="vid">
             <source src="../images/video.mp4" type="video/mp4">
           </video>
         </div>
         <div id="packing" class="hide">
-            <h3>Package is going on</h3>
+          <h3>Package is going on</h3>
           <img src="../images/packagePPT.png" width="100%" height="700px">
         </div>
-
+        <div id="dynamicImage" class="hide">
+          <h3>Image Uploaded from Mobile</h3>
+          <img id="imageId" src="../images/packagePPT.png" width="100%" height="700px">
+        </div>
       </div>
     </div>
   </div>
@@ -107,10 +110,12 @@
   }
 
   function showContentsOnRunTime(workflowName) {
-    console.log('workflowName-------->',workflowName)
+    console.log('workflowName-------->', workflowName)
     let elementMap = document.getElementById("map");
     let elementVideo = document.getElementById("video");
     let elementPacking = document.getElementById("packing");
+    let dynamicImage = document.getElementById("dynamicImage");
+    let imageId = document.getElementById("imageId");
 
     if (workflowName === 'Dispatch') {
       elementMap.classList.remove("hide");
@@ -123,6 +128,10 @@
       elementPacking.classList.add("hide");
 
     } else if (workflowName === 'Package') {
+      elementPacking.classList.remove("hide");
+      elementVideo.classList.add("hide");
+      elementMap.classList.add("hide");
+    } else if (workflowName === 'Mangos') {
       elementPacking.classList.remove("hide");
       elementVideo.classList.add("hide");
       elementMap.classList.add("hide");
